--- a/css/app.css
+++ b/css/app.css
@@ -46,10 +46,10 @@ h2 {
     text-shadow: 0 0 5px #01579b;
 }
 
-#florida {
+#cairo {
     background-color: #03a9f4;
 }
 
-#paris {
+#dubai {
     background-color: #d32f2f;
 }
